--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="_1_dari_3">1 dari 3</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="_2_dari_3">2 dari 3</string>
+    <string name="isikan_emailmu_dengan_benar_jangan_sampai_salah">Isikan emailmu dengan benar, jangan sampai salah</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="have_acc">Sudah punya akun?</string>
+    <string name="next">Selanjutnya</string>
+    <string name="_3_dari_3">3 dari 3</string>
+    <string name="tulis_kata_sandi_milikmu_jangan_sampai_orang_lain_tau_ya">Tulis kata sandi milikmu, jangan sampai orang lain tau ya</string>
+    <string name="konfirmasi_kata_sandi">Konfirmasi kata sandi</string>
 </resources>
